# invincible-voice

./: .env.example  .gitattributes  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: lint.yml
scripts/: generate-local-certs.ps1
services/backend/: .gcloudignore  Dockerfile  pyproject.toml  ws_e2e_test.py  ws_local_test.py
services/backend/backend/: app_types.py  kyutai_constants.py  main.py  memory.py  memory_llm.py  openai_realtime_api_events.py  security.py  storage.py  text_only_handler.py  typing.py  unmute_handler.py
services/backend/backend/libs/: health.py  rate_limit.py  redis_lock.py  redis_metrics.py  (+1 more)
services/backend/tests/: conftest.py  test_anonymous_gate.py  test_auth_validation.py  test_conversations.py  test_healthcheck_local_llm.py  test_llm_structured_output_fallback.py  test_memory.py  test_rate_limit.py  test_speaker_text_triggers_llm.py  test_text_only_handler.py  test_user_settings.py  test_websocket_health_gating.py
services/frontend/: .firebaserc  .gitignore  README.md  capacitor.config.ts  firebase.json  jest.config.js  jest.setup.js  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
services/frontend/android/: .gitignore  README.md  capacitor.settings.gradle
services/frontend/android/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
services/frontend/public/: sw.js
services/frontend/scripts/: apply-speech-recognition-offline-preference.mjs  build-android.mjs  build-export.mjs  fetch-llama-cpp.mjs  run-local-bin.mjs
services/frontend/src/: constants.ts
(+133 files in other folders)
